# web-server

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  config.h.cmake  httpd.conf  httpd.yaml
cmake/: CMakeLists.txt
config_parser/: CMakeLists.txt  config.h  config_parser.c  config_parser.h
config_parser/yaml/: yaml_config_parser.c  yaml_config_parser.h
http/: CMakeLists.txt  http.c  http.h
script_executor/: CMakeLists.txt  script_executor.c  script_executor.h
src/: main.c
